// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`base.jsx 1`] = `
<DocumentFragment>
  <div
    class="tdesign-demo-block"
  >
    <button
      class="t-button t-button--theme-primary t-button--variant-base"
    >
      主要按钮
    </button>
    <button
      class="t-button t-button--theme-default t-button--variant-outline"
    >
      次要按钮
    </button>
    <button
      class="t-button t-button--theme-default t-button--variant-dashed"
    >
      虚框按钮
    </button>
    <button
      class="t-button t-button--theme-default t-button--variant-text"
    >
      文字按钮
    </button>
  </div>
  <div
    class="tdesign-demo-block"
  >
    <button
      class="t-button t-button--theme-primary t-button--variant-base"
    >
      主要按钮
    </button>
    <button
      class="t-button t-button--theme-primary t-button--variant-outline"
    >
      次要按钮
    </button>
    <button
      class="t-button t-button--theme-primary t-button--variant-dashed"
    >
      虚框按钮
    </button>
    <button
      class="t-button t-button--theme-primary t-button--variant-text"
    >
      文字按钮
    </button>
  </div>
  <div
    class="tdesign-demo-block"
  >
    <button
      class="t-button t-button--theme-danger t-button--variant-base"
    >
      主要按钮
    </button>
    <button
      class="t-button t-button--theme-danger t-button--variant-outline"
    >
      次要按钮
    </button>
    <button
      class="t-button t-button--theme-danger t-button--variant-dashed"
    >
      虚框按钮
    </button>
    <button
      class="t-button t-button--theme-danger t-button--variant-text"
    >
      文字按钮
    </button>
  </div>
</DocumentFragment>
`;

exports[`block.jsx 1`] = `
<DocumentFragment>
  <div
    style="display: flex;"
  >
    <div
      style="display: flex; flex-direction: column; width: 50%; margin: auto;"
    >
      <button
        class="t-button t-button--theme-primary t-button--variant-base t-size-full-width"
      >
        主按钮
      </button>
      <button
        class="t-button t-button--theme-default t-button--variant-outline t-size-full-width"
      >
        次要按钮
      </button>
      <button
        class="t-button t-button--theme-default t-button--variant-dashed t-size-full-width"
      >
        虚框按钮
      </button>
      <button
        class="t-button t-button--theme-default t-button--variant-text t-size-full-width"
      >
        文字按钮
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ghost.jsx 1`] = `
<DocumentFragment>
  <div
    style="background: rgb(36, 36, 36); padding: 24px;"
  >
    <div
      class="tdesign-demo-block"
    >
      <button
        class="t-button t-button--theme-default t-button--variant-outline t-button--ghost"
      >
        幽灵按钮
      </button>
      <button
        class="t-button t-button--theme-default t-button--variant-dashed t-button--ghost"
      >
        幽灵按钮
      </button>
      <button
        class="t-button t-button--theme-default t-button--variant-text t-button--ghost"
      >
        幽灵按钮
      </button>
    </div>
    <div
      class="tdesign-demo-block"
    >
      <button
        class="t-button t-button--theme-primary t-button--variant-outline t-button--ghost"
      >
        幽灵按钮
      </button>
      <button
        class="t-button t-button--theme-primary t-button--variant-dashed t-button--ghost"
      >
        幽灵按钮
      </button>
      <button
        class="t-button t-button--theme-primary t-button--variant-text t-button--ghost"
      >
        幽灵按钮
      </button>
    </div>
    <div
      class="tdesign-demo-block"
    >
      <button
        class="t-button t-button--theme-danger t-button--variant-outline t-button--ghost"
      >
        幽灵按钮
      </button>
      <button
        class="t-button t-button--theme-danger t-button--variant-dashed t-button--ghost"
      >
        幽灵按钮
      </button>
      <button
        class="t-button t-button--theme-danger t-button--variant-text t-button--ghost"
      >
        幽灵按钮
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`group.jsx 1`] = `
<DocumentFragment>
  <div
    class="button-wrap"
  >
    <button
      class="t-button t-button--theme-primary t-button--variant-base"
    >
      确定
    </button>
    <button
      class="t-button t-button--theme-default t-button--variant-outline"
    >
      取消
    </button>
  </div>
  <div
    class="button-wrap"
  >
    <button
      class="t-button t-button--theme-primary t-button--variant-base"
    >
      下一步
    </button>
    <button
      class="t-button t-button--theme-default t-button--variant-outline"
    >
      上一步
    </button>
  </div>
  <div
    class="button-wrap"
  >
    <button
      class="t-button t-button--theme-primary t-button--variant-base"
    >
      新建主机
    </button>
    <button
      class="t-button t-button--theme-primary t-button--variant-base"
    >
      重装系统
    </button>
    <button
      class="t-button t-button--theme-default t-button--variant-outline"
    >
      批量续费
    </button>
    <button
      class="t-button t-button--theme-default t-button--variant-outline t-button--icon-only"
    >
      <svg
        class="t-icon t-icon-more"
        version="1.1"
        viewBox="0 0 1024 1024"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M576 192.00000000000003C576 227.34622400000003 547.346224 256.00000000000006 512 256.00000000000006 476.653776 256.00000000000006 448 227.34622400000003 448 192.00000000000003 448 156.65377600000002 476.653776 128.00000000000003 512 128.00000000000003 547.346224 128.00000000000003 576 156.65377600000002 576 192.00000000000003ZM576 512C576 547.346224 547.3462240000001 576 512 576 476.653776 576 448 547.346224 448 512 448 476.65377600000005 476.653776 448.00000000000006 512 448.00000000000006 547.346224 448.00000000000006 576 476.653776 576 512ZM576 832C576 867.3462208 547.3462240000001 896 512 896 476.653776 896 448 867.3462208 448 832 448 796.6537792 476.653776 768 512 768 547.3462240000001 768 576 796.6537792 576 832Z"
          fill-rule="evenodd"
        />
      </svg>
    </button>
  </div>
</DocumentFragment>
`;

exports[`icon.jsx 1`] = `
<DocumentFragment>
  <button
    class="t-button t-button--theme-primary t-button--variant-base"
  >
    <svg
      class="t-icon t-icon-search"
      version="1.1"
      viewBox="0 0 1024 1024"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M416 128C575.05800768 128 704 256.94199232 704 416 704 495.52900416 671.7644992 567.52900416 619.64675328 619.64675328L858.5096704 858.5096704 813.2548352 903.7644992 569.33373568 659.8328576C524.93400192 687.812288 472.35742272 704 416 704 256.94199232 704 128 575.05800768 128 416 128 256.94199232 256.94199232 128 416 128ZM416 192C292.28821632 192 192 292.28821632 192 416 192 539.71178368 292.28821632 640 416 640 539.71178368 640 640 539.71178368 640 416 640 292.28821632 539.71178368 192 416 192Z"
        fill-opacity=".9"
        fill-rule="evenodd"
      />
    </svg>
    <span
      class="t-button__text"
    >
      line
    </span>
  </button>
  <button
    class="t-button t-button--theme-default t-button--variant-outline"
  >
    <svg
      class="t-icon t-icon-search"
      version="1.1"
      viewBox="0 0 1024 1024"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M416 128C575.05800768 128 704 256.94199232 704 416 704 495.52900416 671.7644992 567.52900416 619.64675328 619.64675328L858.5096704 858.5096704 813.2548352 903.7644992 569.33373568 659.8328576C524.93400192 687.812288 472.35742272 704 416 704 256.94199232 704 128 575.05800768 128 416 128 256.94199232 256.94199232 128 416 128ZM416 192C292.28821632 192 192 292.28821632 192 416 192 539.71178368 292.28821632 640 416 640 539.71178368 640 640 539.71178368 640 416 640 292.28821632 539.71178368 192 416 192Z"
        fill-opacity=".9"
        fill-rule="evenodd"
      />
    </svg>
    <span
      class="t-button__text"
    >
      primary
    </span>
  </button>
  <button
    class="t-button t-button--theme-primary t-button--variant-base t-button--icon-only"
  >
    <svg
      class="t-icon t-icon-search"
      version="1.1"
      viewBox="0 0 1024 1024"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M416 128C575.05800768 128 704 256.94199232 704 416 704 495.52900416 671.7644992 567.52900416 619.64675328 619.64675328L858.5096704 858.5096704 813.2548352 903.7644992 569.33373568 659.8328576C524.93400192 687.812288 472.35742272 704 416 704 256.94199232 704 128 575.05800768 128 416 128 256.94199232 256.94199232 128 416 128ZM416 192C292.28821632 192 192 292.28821632 192 416 192 539.71178368 292.28821632 640 416 640 539.71178368 640 640 539.71178368 640 416 640 292.28821632 539.71178368 192 416 192Z"
        fill-opacity=".9"
        fill-rule="evenodd"
      />
    </svg>
  </button>
</DocumentFragment>
`;

exports[`shape.jsx 1`] = `
<DocumentFragment>
  <div
    class="tdesign-demo-block"
  >
    <button
      class="t-button t-button--theme-primary t-button--variant-base"
    >
      主按钮
    </button>
    <button
      class="t-button t-button--theme-primary t-button--variant-base t-button--shape-round"
    >
      主按钮
    </button>
    <button
      class="t-button t-button--theme-primary t-button--variant-base t-button--shape-circle"
    >
      i
    </button>
  </div>
  <div
    class="tdesign-demo-block"
  >
    <button
      class="t-button t-button--theme-default t-button--variant-outline"
    >
      次要按钮
    </button>
    <button
      class="t-button t-button--theme-default t-button--variant-outline t-button--shape-round"
    >
      次要按钮
    </button>
    <button
      class="t-button t-button--theme-default t-button--variant-outline t-button--shape-circle"
    >
      i
    </button>
  </div>
  <div
    class="tdesign-demo-block"
  >
    <button
      class="t-button t-button--theme-default t-button--variant-dashed"
    >
      虚框按钮
    </button>
    <button
      class="t-button t-button--theme-default t-button--variant-dashed t-button--shape-round"
    >
      虚框按钮
    </button>
    <button
      class="t-button t-button--theme-default t-button--variant-dashed t-button--shape-circle"
    >
      i
    </button>
  </div>
  <div
    class="tdesign-demo-block"
  >
    <button
      class="t-button t-button--theme-default t-button--variant-text"
    >
      文字按钮
    </button>
    <button
      class="t-button t-button--theme-default t-button--variant-text t-button--shape-round"
    >
      文字按钮
    </button>
    <button
      class="t-button t-button--theme-default t-button--variant-text t-button--shape-circle"
    >
      i
    </button>
  </div>
</DocumentFragment>
`;

exports[`size.jsx 1`] = `
<DocumentFragment>
  <div
    class="tdesign-demo-block"
  >
    <button
      class="t-button t-button--theme-primary t-button--variant-base t-size-s"
    >
      主按钮
    </button>
    <button
      class="t-button t-button--theme-default t-button--variant-outline t-size-s"
    >
      次要按钮
    </button>
    <button
      class="t-button t-button--theme-default t-button--variant-dashed t-size-s"
    >
      虚框按钮
    </button>
    <button
      class="t-button t-button--theme-default t-button--variant-text t-size-s"
    >
      文字按钮
    </button>
  </div>
  <div
    class="tdesign-demo-block"
  >
    <button
      class="t-button t-button--theme-primary t-button--variant-base"
    >
      主按钮
    </button>
    <button
      class="t-button t-button--theme-default t-button--variant-outline"
    >
      次要按钮
    </button>
    <button
      class="t-button t-button--theme-default t-button--variant-dashed"
    >
      虚框按钮
    </button>
    <button
      class="t-button t-button--theme-default t-button--variant-text"
    >
      文字按钮
    </button>
  </div>
  <div
    class="tdesign-demo-block"
  >
    <button
      class="t-button t-button--theme-primary t-button--variant-base t-size-l"
    >
      主按钮
    </button>
    <button
      class="t-button t-button--theme-default t-button--variant-outline t-size-l"
    >
      次要按钮
    </button>
    <button
      class="t-button t-button--theme-default t-button--variant-dashed t-size-l"
    >
      虚框按钮
    </button>
    <button
      class="t-button t-button--theme-default t-button--variant-text t-size-l"
    >
      文字按钮
    </button>
  </div>
</DocumentFragment>
`;
